@@ -34,4 +34,11 @@ using namespace std;
 #include "gui3d.h"
 #include "tinyxml/tinyxml.h"
 
+
+#ifdef QueryPerformanceFrequency
+#undef QueryPerformanceFrequency
+#endif
+BOOL QueryPerformanceFrequencyXbox(LARGE_INTEGER *lpFrequency);
+#define QueryPerformanceFrequency(a) QueryPerformanceFrequencyXbox(a)
+
 // TODO: reference additional headers your program requires here
